--- a/make_holiday.ipynb
+++ b/make_holiday.ipynb
@@ -344,25 +344,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 월급일"
+    "# 월급일 변수"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 608,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "0        False\n1        False\n2        False\n3        False\n4        False\n5        False\n6        False\n7        False\n8        False\n9        False\n10       False\n11       False\n12       False\n13       False\n14       False\n15       False\n16       False\n17       False\n18       False\n19       False\n20       False\n21       False\n22       False\n23       False\n24       False\n25       False\n26       False\n27       False\n28       False\n29       False\n         ...  \n38279    False\n38280    False\n38281    False\n38282    False\n38283    False\n38284    False\n38285    False\n38286    False\n38287    False\n38288    False\n38289    False\n38290    False\n38291    False\n38292    False\n38293    False\n38294    False\n38295    False\n38296    False\n38297    False\n38298    False\n38299    False\n38300    False\n38301    False\n38302    False\n38303    False\n38304    False\n38305    False\n38306    False\n38307    False\n38308    False\nName: 방송일시, Length: 38309, dtype: bool"
-     },
-     "metadata": {},
-     "execution_count": 439
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data['방송일시'].dt.day.isin(['10,17,20,25'])"
+    "data['월급일변수'] = data['방송일시'].dt.day.isin([10,17,20,25])"
    ]
   },
   {
@@ -492,22 +483,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 반기별 변수"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 630,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['사분기변수'] = data['방송일시'].dt.quarter -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 631,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "0     1\n58    2\nName: 방송일시, dtype: int64"
+      "text/plain": "                 방송일시  노출(분)    마더코드    상품코드            상품명 상품군   판매단가  \\\n0 2019-01-01 06:00:00   20.0  100346  201072  테이트 남성 셀린니트3종  의류  39900   \n1 2019-01-01 06:00:00    NaN  100346  201079  테이트 여성 셀린니트3종  의류  39900   \n2 2019-01-01 06:20:00   20.0  100346  201072  테이트 남성 셀린니트3종  의류  39900   \n3 2019-01-01 06:20:00    NaN  100346  201079  테이트 여성 셀린니트3종  의류  39900   \n4 2019-01-01 06:40:00   20.0  100346  201072  테이트 남성 셀린니트3종  의류  39900   \n\n         취급액  휴일변수  요일변수   주말변수  오전오후저녁  연속휴일변수  월급일변수  사분기변수  분기별변수  \\\n0  2099000.0  True     1  False       0   False  False      0  False   \n1  4371000.0  True     1  False       0   False  False      0  False   \n2  3262000.0  True     1  False       0   False  False      0  False   \n3  6955000.0  True     1  False       0   False  False      0  False   \n4  6672000.0  True     1  False       0   False  False      0  False   \n\n                 계절변수  \n0 2019-01-01 06:00:00  \n1 2019-01-01 06:00:00  \n2 2019-01-01 06:20:00  \n3 2019-01-01 06:20:00  \n4 2019-01-01 06:40:00  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>방송일시</th>\n      <th>노출(분)</th>\n      <th>마더코드</th>\n      <th>상품코드</th>\n      <th>상품명</th>\n      <th>상품군</th>\n      <th>판매단가</th>\n      <th>취급액</th>\n      <th>휴일변수</th>\n      <th>요일변수</th>\n      <th>주말변수</th>\n      <th>오전오후저녁</th>\n      <th>연속휴일변수</th>\n      <th>월급일변수</th>\n      <th>사분기변수</th>\n      <th>분기별변수</th>\n      <th>계절변수</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2019-01-01 06:00:00</td>\n      <td>20.0</td>\n      <td>100346</td>\n      <td>201072</td>\n      <td>테이트 남성 셀린니트3종</td>\n      <td>의류</td>\n      <td>39900</td>\n      <td>2099000.0</td>\n      <td>True</td>\n      <td>1</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>2019-01-01 06:00:00</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2019-01-01 06:00:00</td>\n      <td>NaN</td>\n      <td>100346</td>\n      <td>201079</td>\n      <td>테이트 여성 셀린니트3종</td>\n      <td>의류</td>\n      <td>39900</td>\n      <td>4371000.0</td>\n      <td>True</td>\n      <td>1</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>2019-01-01 06:00:00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2019-01-01 06:20:00</td>\n      <td>20.0</td>\n      <td>100346</td>\n      <td>201072</td>\n      <td>테이트 남성 셀린니트3종</td>\n      <td>의류</td>\n      <td>39900</td>\n      <td>3262000.0</td>\n      <td>True</td>\n      <td>1</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>2019-01-01 06:20:00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2019-01-01 06:20:00</td>\n      <td>NaN</td>\n      <td>100346</td>\n      <td>201079</td>\n      <td>테이트 여성 셀린니트3종</td>\n      <td>의류</td>\n      <td>39900</td>\n      <td>6955000.0</td>\n      <td>True</td>\n      <td>1</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>2019-01-01 06:20:00</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2019-01-01 06:40:00</td>\n      <td>20.0</td>\n      <td>100346</td>\n      <td>201072</td>\n      <td>테이트 남성 셀린니트3종</td>\n      <td>의류</td>\n      <td>39900</td>\n      <td>6672000.0</td>\n      <td>True</td>\n      <td>1</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>2019-01-01 06:40:00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 449
+     "execution_count": 631
     }
    ],
    "source": [
-    "data.loc[~data[''].duplicated()]['방송일시'].dt.weekday"
+    "data.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 분기별 변수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 625,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['분기별변수'] = data['방송일시'].dt.month.isin(['7','8','9','10','11','12'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 626,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "                 방송일시  노출(분)    마더코드    상품코드            상품명 상품군   판매단가  \\\n0 2019-01-01 06:00:00   20.0  100346  201072  테이트 남성 셀린니트3종  의류  39900   \n1 2019-01-01 06:00:00    NaN  100346  201079  테이트 여성 셀린니트3종  의류  39900   \n2 2019-01-01 06:20:00   20.0  100346  201072  테이트 남성 셀린니트3종  의류  39900   \n3 2019-01-01 06:20:00    NaN  100346  201079  테이트 여성 셀린니트3종  의류  39900   \n4 2019-01-01 06:40:00   20.0  100346  201072  테이트 남성 셀린니트3종  의류  39900   \n\n         취급액  휴일변수  요일변수   주말변수  오전오후저녁  연속휴일변수  월급일변수  사분기변수  분기별변수  \n0  2099000.0  True     1  False       0   False  False      1  False  \n1  4371000.0  True     1  False       0   False  False      1  False  \n2  3262000.0  True     1  False       0   False  False      1  False  \n3  6955000.0  True     1  False       0   False  False      1  False  \n4  6672000.0  True     1  False       0   False  False      1  False  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>방송일시</th>\n      <th>노출(분)</th>\n      <th>마더코드</th>\n      <th>상품코드</th>\n      <th>상품명</th>\n      <th>상품군</th>\n      <th>판매단가</th>\n      <th>취급액</th>\n      <th>휴일변수</th>\n      <th>요일변수</th>\n      <th>주말변수</th>\n      <th>오전오후저녁</th>\n      <th>연속휴일변수</th>\n      <th>월급일변수</th>\n      <th>사분기변수</th>\n      <th>분기별변수</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2019-01-01 06:00:00</td>\n      <td>20.0</td>\n      <td>100346</td>\n      <td>201072</td>\n      <td>테이트 남성 셀린니트3종</td>\n      <td>의류</td>\n      <td>39900</td>\n      <td>2099000.0</td>\n      <td>True</td>\n      <td>1</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>1</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2019-01-01 06:00:00</td>\n      <td>NaN</td>\n      <td>100346</td>\n      <td>201079</td>\n      <td>테이트 여성 셀린니트3종</td>\n      <td>의류</td>\n      <td>39900</td>\n      <td>4371000.0</td>\n      <td>True</td>\n      <td>1</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>1</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2019-01-01 06:20:00</td>\n      <td>20.0</td>\n      <td>100346</td>\n      <td>201072</td>\n      <td>테이트 남성 셀린니트3종</td>\n      <td>의류</td>\n      <td>39900</td>\n      <td>3262000.0</td>\n      <td>True</td>\n      <td>1</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>1</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2019-01-01 06:20:00</td>\n      <td>NaN</td>\n      <td>100346</td>\n      <td>201079</td>\n      <td>테이트 여성 셀린니트3종</td>\n      <td>의류</td>\n      <td>39900</td>\n      <td>6955000.0</td>\n      <td>True</td>\n      <td>1</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>1</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2019-01-01 06:40:00</td>\n      <td>20.0</td>\n      <td>100346</td>\n      <td>201072</td>\n      <td>테이트 남성 셀린니트3종</td>\n      <td>의류</td>\n      <td>39900</td>\n      <td>6672000.0</td>\n      <td>True</td>\n      <td>1</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>1</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 626
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 계절변수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 629,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['계절변수'] = data['방송일시']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 632,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['계절변수'].loc[(data['방송일시'].dt.month.isin(['3','4','5']))] = 0\n",
+    "data['계절변수'].loc[(data['방송일시'].dt.month.isin(['6','7','8']))] = 1\n",
+    "data['계절변수'].loc[(data['방송일시'].dt.month.isin(['9','10','11']))] = 2\n",
+    "data['계절변수'].loc[(data['방송일시'].dt.month.isin(['12','1','2']))] = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 633,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "                 방송일시  노출(분)    마더코드    상품코드            상품명 상품군   판매단가  \\\n0 2019-01-01 06:00:00   20.0  100346  201072  테이트 남성 셀린니트3종  의류  39900   \n1 2019-01-01 06:00:00    NaN  100346  201079  테이트 여성 셀린니트3종  의류  39900   \n2 2019-01-01 06:20:00   20.0  100346  201072  테이트 남성 셀린니트3종  의류  39900   \n3 2019-01-01 06:20:00    NaN  100346  201079  테이트 여성 셀린니트3종  의류  39900   \n4 2019-01-01 06:40:00   20.0  100346  201072  테이트 남성 셀린니트3종  의류  39900   \n\n         취급액  휴일변수  요일변수   주말변수  오전오후저녁  연속휴일변수  월급일변수  사분기변수  분기별변수  계절변수  \n0  2099000.0  True     1  False       0   False  False      0  False     3  \n1  4371000.0  True     1  False       0   False  False      0  False     3  \n2  3262000.0  True     1  False       0   False  False      0  False     3  \n3  6955000.0  True     1  False       0   False  False      0  False     3  \n4  6672000.0  True     1  False       0   False  False      0  False     3  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>방송일시</th>\n      <th>노출(분)</th>\n      <th>마더코드</th>\n      <th>상품코드</th>\n      <th>상품명</th>\n      <th>상품군</th>\n      <th>판매단가</th>\n      <th>취급액</th>\n      <th>휴일변수</th>\n      <th>요일변수</th>\n      <th>주말변수</th>\n      <th>오전오후저녁</th>\n      <th>연속휴일변수</th>\n      <th>월급일변수</th>\n      <th>사분기변수</th>\n      <th>분기별변수</th>\n      <th>계절변수</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2019-01-01 06:00:00</td>\n      <td>20.0</td>\n      <td>100346</td>\n      <td>201072</td>\n      <td>테이트 남성 셀린니트3종</td>\n      <td>의류</td>\n      <td>39900</td>\n      <td>2099000.0</td>\n      <td>True</td>\n      <td>1</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2019-01-01 06:00:00</td>\n      <td>NaN</td>\n      <td>100346</td>\n      <td>201079</td>\n      <td>테이트 여성 셀린니트3종</td>\n      <td>의류</td>\n      <td>39900</td>\n      <td>4371000.0</td>\n      <td>True</td>\n      <td>1</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2019-01-01 06:20:00</td>\n      <td>20.0</td>\n      <td>100346</td>\n      <td>201072</td>\n      <td>테이트 남성 셀린니트3종</td>\n      <td>의류</td>\n      <td>39900</td>\n      <td>3262000.0</td>\n      <td>True</td>\n      <td>1</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2019-01-01 06:20:00</td>\n      <td>NaN</td>\n      <td>100346</td>\n      <td>201079</td>\n      <td>테이트 여성 셀린니트3종</td>\n      <td>의류</td>\n      <td>39900</td>\n      <td>6955000.0</td>\n      <td>True</td>\n      <td>1</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2019-01-01 06:40:00</td>\n      <td>20.0</td>\n      <td>100346</td>\n      <td>201072</td>\n      <td>테이트 남성 셀린니트3종</td>\n      <td>의류</td>\n      <td>39900</td>\n      <td>6672000.0</td>\n      <td>True</td>\n      <td>1</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>0</td>\n      <td>False</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 633
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -801,15 +898,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['계절(반기별)'] = data['방송일시'].dt.month.isin([7,8,9,10,11,12])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -822,24 +910,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "False    19191\nTrue     19118\nName: 계절(반기별), dtype: int64"
-     },
-     "metadata": {},
-     "execution_count": 184
-    }
-   ],
-   "source": [
-    "data['계절(반기별)'].value_counts()"
-   ]
   }
  ]
 }
